--- a/templates/index.html
+++ b/templates/index.html
@@ -131,6 +131,7 @@ li a:hover {
 <body>
     <h1 style="font-size: 4rem">Music Streaming Platform Management</h1>
 
+
     <!-- Listener Section -->
     <h2>Listeners</h2>
     <form action="/add_listener" method="POST">
@@ -274,6 +275,12 @@ li a:hover {
         </li>
     {% endfor %}
 </ul>
+
+
+    <!-- Add this form to index.html to create the logout button -->
+<form action="{{ url_for('logout') }}" method="post">
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>
 
 </body>
 </html>
